--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="src/assets/icon.png" type="image/png">
+    <link rel="icon" href="src/assets/icons/icon.png" type="image/png">
     <title>Movie Hub</title>
   </head>
   <body class="bg-gray-950">
