fix WebSocket lost connection

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="src/assets/icons/icon.png" type="image/png">
     <title>Movie Hub</title>
+    <!--  fix for WebSocket  -->
+    <script>
+      const global = window;
+    </script>
   </head>
   <body class="bg-gray-950">
     <div id="root"></div>
